--- a/src/App.css
+++ b/src/App.css
@@ -14,36 +14,36 @@ body {
   @apply bg-gray-50 text-gray-800 font-sans;
 }
 
-button {
-  @apply bg-blue-500 text-white px-4 py-2 rounded-xl shadow hover:bg-blue-600 transition;
+h1 {
+  @apply font-bold text-2xl text-gray-900 mb-2 p-3;
 }
 
-ul {
-  @apply list-none pl-0;
+h2 {
+  @apply font-bold text-lg text-gray-900 mb-4;
 }
 
-li {
-  @apply mb-1;
-}
-
-input[type="checkbox"] {
-  @apply mr-2;
+p {
+  @apply text-md pb-2;
 }
 
 label {
-  @apply block mb-1;
+  @apply block text-sm font-medium text-gray-700 mb-2;
 }
 
-.paddler-selection {
-  @apply p-3 mb-3;
+select {
+  @apply border border-gray-300 rounded px-2 py-1;
 }
 
-.seating-display {
-  @apply bg-white p-3 mt-3;
+input {
+  @apply border border-gray-300 rounded px-2 py-1;
 }
 
-.weights p {
-  @apply text-sm mt-2;
+button {
+  @apply px-2 py-1 bg-purple-500 text-white border-purple-600 hover:bg-purple-600 hover:border-purple-700 rounded transition;
+}
+
+section {
+  @apply mb-4;
 }
 
 .grid-rows-10 {
