--- a/src/App.css
+++ b/src/App.css
@@ -11,39 +11,55 @@ body {
 }
 
 body {
-  @apply bg-gray-50 text-gray-800 font-sans;
+  @apply bg-blue-100 text-slate-800 font-sans;
 }
 
 h1 {
-  @apply font-bold text-2xl text-gray-900 mb-2 p-3;
+  @apply font-bold text-2xl text-slate-700 mb-3;
 }
 
 h2 {
-  @apply font-bold text-lg text-gray-900 mb-4;
+  @apply font-bold text-lg text-slate-900 mb-4;
 }
 
 p {
-  @apply text-md pb-2;
+  @apply text-md pb-1;
 }
 
 label {
-  @apply block text-sm font-medium text-gray-700 mb-2;
+  @apply block text-sm font-medium text-slate-700 mb-2;
+}
+
+.boat-label {
+  @apply block text-sm font-medium text-slate-700;
 }
 
 select {
-  @apply border border-gray-300 rounded px-2 py-1;
+  @apply border border-slate-300 rounded px-2 py-1;
 }
 
 input {
-  @apply border border-gray-300 rounded px-2 py-1;
+  @apply border border-slate-300 rounded px-2 py-1;
 }
 
 button {
-  @apply px-2 py-1 bg-purple-500 text-white border-purple-600 hover:bg-purple-600 hover:border-purple-700 rounded transition;
+  @apply px-2 py-1 bg-purple-500 font-medium text-white border-purple-600 hover:bg-purple-600 hover:border-purple-700 rounded transition-all;
+}
+
+option:hover {
+  @apply bg-purple-500;
 }
 
 section {
   @apply mb-4;
+}
+
+fieldset {
+  @apply mb-3;
+}
+
+.paddler {
+  @apply px-3 py-2 rounded-xl border border-slate-300 hover:border-sky-500 transition-all duration-150;
 }
 
 .grid-rows-10 {
