--- a/src/App.css
+++ b/src/App.css
@@ -15,11 +15,11 @@ body {
 }
 
 h1 {
-  @apply font-bold text-2xl text-slate-700 mb-3;
+  @apply font-bold text-xl sm:text-2xl text-slate-700 mb-3;
 }
 
 h2 {
-  @apply font-bold text-lg text-slate-600 mb-4;
+  @apply font-bold text-lg text-slate-700 mb-4;
 }
 
 p {
