--- a/src/App.css
+++ b/src/App.css
@@ -23,11 +23,11 @@ h2 {
 }
 
 p {
-  @apply text-md pb-1;
+  @apply text-md pb-3;
 }
 
 label {
-  @apply block text-sm font-medium text-slate-700 mb-2;
+  @apply block text-sm font-medium text-slate-700 mb-1;
 }
 
 .boat-label {
@@ -35,15 +35,27 @@ label {
 }
 
 select {
-  @apply border border-slate-300 rounded px-2 py-1;
+  @apply border border-slate-300 focus:border-purple-500 rounded px-2 py-1;
+}
+
+option {
+  @apply focus:border-purple-500;
 }
 
 input {
-  @apply border border-slate-300 rounded px-2 py-1;
+  @apply border border-slate-300 focus:border-purple-500 outline-none rounded px-2 py-1;
 }
 
 button {
   @apply px-2 py-1 bg-purple-500 font-medium text-white border-purple-600 hover:bg-purple-600 hover:border-purple-700 rounded transition-all;
+}
+
+.button-alt {
+  @apply bg-slate-500 hover:bg-slate-600;
+}
+
+.button-inactive {
+  @apply bg-slate-200 hover:bg-slate-200 cursor-default;
 }
 
 option:hover {
@@ -56,6 +68,10 @@ section {
 
 fieldset {
   @apply mb-3;
+}
+
+.toggle-form {
+  @apply mt-2 p-2 rounded flex w-max gap-2 items-end inline-block bg-gradient-to-b from-white to-purple-50;
 }
 
 .paddler {
