tab cleanup, some more refactoring

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ body {
 }
 
 h1 {
-  @apply font-bold text-xl sm:text-2xl text-slate-700 mb-3;
+  @apply font-medium text-2xl sm:text-3xl text-slate-700 mb-3;
 }
 
 h2 {
