--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,8 @@ a {
   @apply no-underline hover:underline text-purple-600 active:text-sky-500 outline-none focus:border-dashed focus:border-b focus:border-sky-500;
 }
 
-label {
+label,
+legend {
   @apply block text-sm font-medium text-slate-700 mb-1;
 }
 
